--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -4,7 +4,7 @@
  [{"url": "https://github.com/leanprover/std4",
    "type": "git",
    "subDir": null,
-   "rev": "dbb4045860667f0d09669dbfb524b6e7b0ca3aca",
+   "rev": "4c366aba55d28778421b8a1841e5512fd5c53c43",
    "name": "std",
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
@@ -13,7 +13,7 @@
   {"url": "https://github.com/leanprover-community/quote4",
    "type": "git",
    "subDir": null,
-   "rev": "ccba5d35d07a448fab14c0e391c8105df6e2564c",
+   "rev": "fd760831487e6835944e7eeed505522c9dd47563",
    "name": "Qq",
    "manifestFile": "lake-manifest.json",
    "inputRev": "master",
@@ -22,7 +22,7 @@
   {"url": "https://github.com/leanprover-community/aesop",
    "type": "git",
    "subDir": null,
-   "rev": "3141402ba5a5f0372d2378fd75a481bc79a74ecf",
+   "rev": "e4660fa21444bcfe5c70d37b09cc0517accd8ad7",
    "name": "aesop",
    "manifestFile": "lake-manifest.json",
    "inputRev": "master",
@@ -31,10 +31,10 @@
   {"url": "https://github.com/leanprover-community/ProofWidgets4",
    "type": "git",
    "subDir": null,
-   "rev": "909febc72b4f64628f8d35cd0554f8a90b6e0749",
+   "rev": "f5b2b6ff817890d85ffd8ed47637e36fcac544a6",
    "name": "proofwidgets",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "v0.0.23",
+   "inputRev": "v0.0.28",
    "inherited": true,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover/lean4-cli",
@@ -46,10 +46,19 @@
    "inputRev": "main",
    "inherited": true,
    "configFile": "lakefile.lean"},
+  {"url": "https://github.com/leanprover-community/import-graph.git",
+   "type": "git",
+   "subDir": null,
+   "rev": "64d082eeaad1a8e6bbb7c23b7a16b85a1715a02f",
+   "name": "importGraph",
+   "manifestFile": "lake-manifest.json",
+   "inputRev": "main",
+   "inherited": true,
+   "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover-community/mathlib4.git",
    "type": "git",
    "subDir": null,
-   "rev": "8fe6d2da03600766a6037b326e18901334ccc4d4",
+   "rev": "d475374f5e4e7ad1260dd93b29d3995ff3129941",
    "name": "mathlib",
    "manifestFile": "lake-manifest.json",
    "inputRev": null,
@@ -67,7 +76,7 @@
   {"url": "https://github.com/fgdorais/lean4-unicode-basic",
    "type": "git",
    "subDir": null,
-   "rev": "280d75fdfe7be8eb337be7f1bf8479b4aac09f71",
+   "rev": "5b096942260d7805cc90bacf4ea4a0f8e9700ccb",
    "name": "UnicodeBasic",
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
@@ -76,7 +85,7 @@
   {"url": "https://github.com/hargonix/LeanInk",
    "type": "git",
    "subDir": null,
-   "rev": "2447df5cc6e48eb965c3c3fba87e46d353b5e9f1",
+   "rev": "f1f904e00d79a91ca6a76dec6e318531a7fd2a0f",
    "name": "leanInk",
    "manifestFile": "lake-manifest.json",
    "inputRev": "doc-gen",
@@ -85,7 +94,7 @@
   {"url": "https://github.com/leanprover/doc-gen4",
    "type": "git",
    "subDir": null,
-   "rev": "53ecc225fea834acd7f32b9dc1aed880b79d70b9",
+   "rev": "780bbec107cba79d18ec55ac2be3907a77f27f98",
    "name": "«doc-gen4»",
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
